# sensor-fusion-navigation-ros2

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
description/: camera.xacro  lidar.xacro  properties.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_sim.launch.py  rsp.launch.py
nodes/: point_cloud_clustering.cpp
